# BioVisionAI_BackEnd

./: README.md  pyproject.toml  requirements.txt
biovision_ai/: __init__.py
biovision_ai/api/: __init__.py  app.py  inference.py  model_loader.py  schemas.py
biovision_ai/config/: __init__.py  default.yaml  loader.py
biovision_ai/data/: __init__.py  augmentations.py  datasets.py  dummy.py
biovision_ai/models/: __init__.py  clinical_encoder.py  explainability.py  fusion.py  heads.py  multimodal_model.py
biovision_ai/models/backbones/: __init__.py  image_backbone.py
biovision_ai/models/segmentation/: __init__.py  unet.py
biovision_ai/models/trajectory/: __init__.py  generative_placeholder.py  sequence_model.py  stage_classifier.py
biovision_ai/training/: __init__.py  evaluation.py  losses.py  trainer.py
biovision_ai/utils/: __init__.py  logging.py
config/: default.yaml
configs/: classification.yaml  colab_classification.yaml  colab_seg.yaml  default.yaml
data/: augmentation.py
data/datasets/: skin_lesion.py
scripts/: evaluate.py  export_onnx.py  run_api.py  train.py  train_segmentation.py
tests/: __init__.py  test_model.py
